--- a/README.Rmd
+++ b/README.Rmd
@@ -53,7 +53,7 @@ Load libraries:
 ```
 
 Load data set from package to estimate a simple, new-Keynesian, closed-
-economy model. These data are used by Jordà (2005) in chapter IV. 
+economy model. These data are used by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.1257/0002828053828518) in chapter IV. 
 Please see the data's help file or the original paper for a detailed description. 
 ```{r, message = FALSE }
 # Load data (from package)
@@ -62,7 +62,7 @@ Please see the data's help file or the original paper for a detailed description
 
 Make list and specify input variables to estimate linear impulse responses. 
 ```{r, message = FALSE }
-# Create list for input
+# Make list for inputs
   specs <- list()
 
 # Specify inputs
@@ -74,19 +74,18 @@ Make list and specify input variables to estimate linear impulse responses.
   specs$confint        <- 1.96    # Width of confidence bands: 1 = 68%, 1.67 = 90%, 1.96 = 95%
   specs$hor            <- 12L     # Length of horizon
 ```
-Estimate linear impulse responses 
+Estimate linear impulse responses. 
 ```{r, message = FALSE }  
   results_lin  <- lp_lin(data_set_df, specs)
 ```
 
-Save all plots with package function
+Make plots for impulse responses of linear model.
 ```{r, message = FALSE }
-# Make plots
   linear_plots <- plot_lin_irfs(results_lin)
 ```
 Display single impulse responses: 
 
-- The first plot shows the response of the first variable (GDP_gap) to a shock in the first variable in. 
+- The first plot shows the response of the first variable (GDP_gap) to a shock in the first variable in (GDP_gap). 
 - The second plot shows the response of the first variable (GDP_gap) to a shock in the second variable (Inflation). 
 ```{r, fig.height = 3, fig.width = 4, fig.align = "center", message = FALSE }
   linear_plots[[1]]
@@ -95,7 +94,7 @@ Display single impulse responses:
 
 Display all plots:
 
-- This graph is similar to Figure 5 in Jordà (2005), p. 176, but has wider confidence bands. 
+- This graph is similar to Figure 5 in Jordà (2005), p. 176, but has slightly wider confidence bands. 
 - Figure 5 in Jordà (2005) is replicated when specs$confint = 1.67 (90% error bands).
 ```{r, fig.height = 6, fig.width = 8, fig.align = "center", message = FALSE }  
 # Show all plots
@@ -120,16 +119,16 @@ Load libraries:
 ```
 
 Load data set from package to estimate a non-linear, new-Keynesian, closed-
-economy model. This data set is used by Jordà (2005) in chapter IV, p.174.
+economy model. This data set is used by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.1257/0002828053828518) in chapter IV.
 Please see the data's help file or the original paper for a detailed description. 
 ```{r, message = FALSE }
 # Load data (from package)
   data_set_df <- interest_rules_var_data
 ```
 
-Make list and specify input variables to estimate non-linear irfs. 
+Make list and specify input variables to estimate non-linear impulse responses. 
 ```{r, message = FALSE }
-# Create list for input
+# Make list for inputs
   specs <- list()
 
 # Specify inputs
@@ -145,46 +144,47 @@ Make list and specify input variables to estimate non-linear irfs.
 Provide a switching variable to separate the data into two regimes.
 ```{r, message = FALSE }
 # Specifications for switching variable
-  specs$switching      <- data_set_df$GDP_gap # The output_gap is used as input into the tranistion function
+  specs$switching      <- data_set_df$GDP_gap # The output gap is used to differentiate between two regimes
   specs$hp_filter      <- 1                   # 0 = Do not use HP-filter to decompose switching-variable, 
                                               # 1 = Use HP-filter to decompose switching-variable
   specs$lambda         <- 1600                # Monthly = 129600, Quarterly = 1600, Annual = 6.25
   specs$gamma          <- 3                   # Numeric value > 0
 ```
 
-The switching variable ($z$) is either decomposed by the Hodrick-Prescott filter (*hp_filter = 1*) or directly plugged into the follwing switching function.
+The switching variable ($z$) is either decomposed by the Hodrick-Prescott filter (*specs$hp_filter = 1*) or directly plugged into the follwing switching function.
 
-$F_{z_t}=\frac{exp(-\gamma z_t)}{1 + exp(-\gamma z_t)}$
+    $F_{z_t}=\frac{exp(-\gamma z_t)}{1 + exp(-\gamma z_t)}$
 
 - Data for regime 1 are calculated as: $X_{t-p}*(1-F(z_{t-1}))$
 - Data for regime 2 are calculated as: $X_{t-p}*F(z_{t-1})$
 
 
-IMPORTANT: To avoid contemporaneous feedback, the index of $z$ is set to *t − 1* (for details see 
-[Auerbach and Gorodnichenko; 2012)](https://www.aeaweb.org/articles?id=10.1257/pol.4.2.1)
-This is done automatically in the function *create_nl_data*. 
+IMPORTANT: To avoid contemporaneous feedback, the index of $z$ is set to *t − 1* (see 
+[Auerbach and Gorodnichenko; 2012)](https://www.aeaweb.org/articles?id=10.1257/pol.4.2.1) for details) 
+The lag is created  automatically in *create_nl_data* of the package. 
 If you do not want the switching function to be lagged, please provide the switching variable with a lead of one.
 
 
-Estimate non-linear impulse responses 
+Estimate non-linear impulse responses. 
 ```{r, message = FALSE }  
   results_nl <- lp_nl(data_set_df, specs)
 ```
 
-Extract values of transition function from *results_nl* and make date sequence.
+Save values from transition function.
 ```{r, message = FALSE } 
   fz      <- results_nl$fz
-
-# Start with sequence in October because the non-linear model is estimated with three lags.
-  dates   <- seq(as.Date("1955/10/1"), as.Date("2003/1/1"), by = "quarter")
-  data_df <- data_frame(x = dates, fz = fz, gdp_gap = specs$switching[(specs$lags_nl+1):length(data_set_df$FF)])
 ```
 
 Plot output gap
-```{r, fig.height = 4, fig.width = 6, fig.align = "center", message = FALSE }  
+```{r, fig.height = 4, fig.width = 6, fig.align = "center", message = FALSE } 
+# Make date sequence. Start in October because the non-linear model is estimated with three lags.
+  dates   <- seq(as.Date("1955/10/1"), as.Date("2003/1/1"), by = "quarter")
+  data_df <- data_frame(x = dates, fz = fz, gdp_gap = specs$switching[(specs$lags_nl+1):length(data_set_df$FF)])
+
+# Plot  
   ggplot(data = data_df) +
     geom_line(aes(x = x, y = gdp_gap)) +
-    theme_light() +
+    theme_bw() +
     ylab("") +
     xlab("Date") +
     scale_x_date(date_breaks = "5 year",  date_labels = "%Y")
@@ -194,41 +194,40 @@ Plot tranistion function
 ```{r, fig.height = 4, fig.width = 6, fig.align = "center", message = FALSE }  
   ggplot(data = data_df) +
     geom_line(aes(x = x, y = fz)) +
-    theme_light() +
+    theme_bw() +
     ylab("") +
     xlab("Date") +
     scale_x_date(date_breaks = "5 year",  date_labels = "%Y")
 ```
 
-Make all plots with package function
+Create and save all plots.
 ```{r, message = FALSE }
     nl_plots <- plot_nl_irfs(results_nl)
 ```
 
 Show first impulse response of each regime: 
 
-- The first plot shows the response of the first variable (GDP_gap) to the shock in the first variable in regime 1. 
-- The second plot shows the response of the first variable (GDP_gap) to the shock in the first in regime 2. 
+- The first plot shows the response of the first variable (GDP_gap) to a shock in the first variable (GDP_gap) in regime 1. 
+- The second plot shows the response of the first variable (GDP_gap) to a shock in the second variable (Inflation) in regime 2. 
 ```{r, fig.height = 3, fig.width = 4, fig.align = "center", message = FALSE }
 # Load packages
   library(ggpubr)
   library(gridExtra)
 
 # Save plots based on states
-  # State 1: High Inflation rates
   s1_plots <- sapply(nl_plots$gg_s1, ggplotGrob)
   s2_plots <- sapply(nl_plots$gg_s2, ggplotGrob)
 
   plot(s1_plots[[1]])
-  plot(s2_plots[[1]])
+  plot(s2_plots[[2]])
 ```
 
-Show all impulse responses of regime 1
+Show all impulse responses of regime 1.
 ```{r, fig.height = 6, fig.width = 8, fig.align = "center", message = FALSE }
   marrangeGrob(s1_plots, nrow = ncol(data_set_df), ncol = ncol(data_set_df), top =  NULL)
 ```
 
-Show all impulse responses of regime 2
+Show all impulse responses of regime 2.
 ```{r, fig.height = 6, fig.width = 8, fig.align = "center", message = FALSE }
   marrangeGrob(s2_plots, nrow = ncol(data_set_df), ncol = ncol(data_set_df), top = NULL)
 ```
@@ -245,7 +244,7 @@ Show all impulse responses of regime 2
 * Ramey, V.A., and Zubairy, S. (2018). "Government Spending Multipliers in Good Times and in Bad: Evidence from US Historical Data." Journal of        Political Economy, 126 (2), 850-901. [doi:10.1086/696277](https://www.journals.uchicago.edu/doi/10.1086/696277)
 
 ## Acknowledgements
-I greatly benefitted from the profound *R* and *Rcpp* knowledge of [Philipp Wittenberg](https://github.com/wittenberg). I am also thankful to [Sarah Zubairy](https://sites.google.com/site/sarahzubairy/) for giving me the *Matlab* code before the publication their paper.
+I greatly benefitted from the profound *R* and *Rcpp* knowledge of [Philipp Wittenberg](https://github.com/wittenberg). I am also grateful to [Sarah Zubairy](https://sites.google.com/site/sarahzubairy/) for sending me the *Matlab* code before the publication their [paper](https://www.journals.uchicago.edu/doi/10.1086/696277).
 
 ### Author
 Philipp Adämmer
