--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 ```
 
 
+A detailed description can be found [here.](https://adaemmerp.github.io/lpirfs/README_docs.html)
+
 # lpirfs
 An R-package which estimates linear and non-linear impulse responses
 with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.1257/0002828053828518).
